--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -899,13 +899,29 @@ h4 {
   margin-bottom: 4rem;
   margin-top: 2rem;
 }
+
 .often-questions .accordion-heading span {
   border-bottom: 2px dotted #333;
 }
+.often-questions .accordion-heading.active span {
+  color:rgba(178, 80, 188, 0.8);
+  font-weight: 900;
+}
+
 .often-questions .accordion-block {
-  margin-top: 1rem;
   background-color: #f7e7e6;
+  opacity: 0;
+  height: 0;
+  overflow: hidden;
+  transition: 0.5s all;
+}
+.often-questions .accordion-heading.active+.accordion-block{
+  height: auto;
+  margin-top: 1rem;
   padding: 3rem 4rem;
+  opacity: 1;
+  overflow: visible;
+
 }
 .often-questions .accordion-block:before {
   content: '';
